# PaulOS

./: .gitignore  CMakeLists.txt  Makefile  README  boot.s  build.sh  clean.sh  grub.cfg  install.sh  kernel.c  link.ld  linker.ld  run.sh
kernel/: kernel.c  vga.h
kernel/include/kernel/: tty.h
kernel/tty/: tty.c  tty.h
src/: boot.S  boot.asm  boot.s
src/kernel/: Makefile  kernel.c  kstdio.c  kstdio.h  memory_manager.c  memory_manager.h  string.c  string.h
src/kernel/arch/x86/: boot.S  gdt.S  gdt.s  global_descriptor_table.c  global_descriptor_table.h  interrupt_descriptor_table.c  interrupt_descriptor_table.h  interrupts.c  interrupts.h  io.h
src/kernel/tty/: tty.c  tty.h
src/userland/libraries/libc/: string.c  string.h
